removes unecessary Timer.h and edit .gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,4 @@ Debug/* linguist-vendored
 include/* linguist-vendored
 ldscripts/* linguist-vendored
 system/* linguist-vendored
-carousel/src/_write.c linguist-vendored
+src/_write.c linguist-vendored
